testsuite/positive/bug-0259.n
class B {
  static Main () : void {
    def an = System.Reflection.AssemblyName ();
    an.Version = try {
      null
    }
    finally {
    }
  }
}
