testsuite/negative/Issue-861.n
public class C1 
{
  protected this() {}
  protected static StaticProtectedMethod1() : void { }
}
public class C2 : C1
{
  static Main() : void {}
  protected static StaticProtectedMethod2() : void { }
  
  public static Do() : void
  {
    StaticProtectedMethod1();
    StaticProtectedMethod2();
    def obj = C1(); // E: Cannot access protected 'constructor C1\.\.ctor\(\) : C1'
    _ = obj.MemberwiseClone(); // E: Cannot access protected method 'System\.Object\.MemberwiseClone'
  }
}
